# wisteria

./: .gitignore  README.md  ROADMAP.md  ROADME.md  check_tools.sh  classes.md  code_quality.sh  codesearch.py  codingconventions.md  comparisons.py  create_demonstration_reports.sh  docdef.sh  doublecheck_memusage.sh  err_codes.sh  linden.ini  pimydoc  poetry_show_tree.md  poetry_show_tree.sh  propagate_versionnumber.py  pylintrc  pyproject.toml  tests.sh  wisteria.ini
demonstration_reports/: wisteria2.ini
demonstration_reports/1/: demonstration_report.md  report.txt
demonstration_reports/2/: demonstration_report.md  report.txt
demonstration_reports/3/: demonstration_report.md  report.txt
demonstration_reports/4/: demonstration_report.md  report.txt
linden/: __init__.py  aboutproject.py  data.py  globs.py  linden.py  lindenerror.py  report.py  serializers.py
memoveruse_cpp/: compile.sh  memoveruse_cpp.cpp  memoveruse_cpp.h
report0/: report.md  report.txt
tests/: cwc_pgnreader_default__tests.py  cwc_utils__tests.py  game10.pgn  game11.pgn  game1x.pgn  game2.pgn  game3.pgn  game4.pgn  game5.pgn  game5x.pgn  game6.pgn  game7.pgn  game8.pgn  game9.pgn
wisteria/: __init__.py  aboutproject.py  cfgfile.py  cmdline_cmp.py  cmdline_mymachine.py  cmdline_output.py  data.py  dmfile.py  filterstr.py  globs.py  helpmsg.py  matplotgraphs.py  methodstr.py  msg.py  output.py  report.py  reportaspect.py  reprfmt.py  results.py  serializers.py  serializers_classes.py  stats.py  textandnotes.py  utils.py  wisteria.py  wisteriaerror.py
wisteria/classesexamples/: simpleclasses.py
wisteria/cwc/: cwc_default.py  cwc_utils.py
wisteria/cwc/pgnreader/: cwc_default.py  cwc_iaswn.py  (+3 more)
(+5 files in other folders)
