[tool.poetry]
name = "wisteria"
version = "0.0.6"
description = "Python serializers comparisons"
authors = ["suizokukan <suizokukan@orange.fr>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wisteria = "wisteria.wisteria:main"

[options.entry_points]
wisteria = "wisteria.wisteria:main"
