[tool.poetry]
name = "wisteria"
version = "0.1.2"
description = "Python serializers comparisons"
authors = ["suizokukan <suizokukan@orange.fr>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.11.0"
py-cpuinfo = "^8.0.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wisteria = "wisteria.wisteria:main"

[options.entry_points]
wisteria = "wisteria.wisteria:main"
